--- a/docs/Makefile
+++ b/docs/Makefile
@@ -16,10 +16,6 @@ help:
 
 # Catch-all target: route all unknown targets to Sphinx using the new
 # "make mode" option.  $(O) is meant as a shortcut for $(SPHINXOPTS).
-%: Makefile generate_reference
+%: Makefile
 	@$(SPHINXBUILD) -M $@ "$(SOURCEDIR)" "$(BUILDDIR)" $(SPHINXOPTS) $(O)
-
-generate_reference:
-	sphinx-apidoc -o source -d 5 --force ../
-.PHONY: generate_reference
 
