isolated matplotlib contexts, updated tqdm to use tqdm_auto, moved mades.py contents to ndes.py, flattened pydelfi/ directory structure, moved simulators to examples/

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+pydelfi/mades.py
+pydelfi/__pycache__
+pydelfi/*pyc
+reloaded_cosmic_shear_prerun_sims.ipynb
+gamma_made.ipynb
 plotting.ipynb
 bodelfi.ipynb
 cosmic_shear-IMNN (3D).ipynb
@@ -34,23 +39,23 @@ distributions/__pycache__
 distributions/*.pyc
 ndes/__pycache__
 ndes/*.pyc
-simulators/__pycache__
-simulators/*.pyc
-simulators/cosmic_shear/__pycache__
-simulators/cosmic_shear/*.pyc
-simulators/cosmic_shear/results/*
-!simulators/cosmic_shear/results/README.md
-simulators/cosmic_shear/results_prerun/*
-!simulators/cosmic_shear/results_prerun/README.md
-simulators/jla_supernovae/__pycache__
-simulators/jla_supernovae/*.pyc
-simulators/jla_supernovae/results/*
-!simulators/jla_supernovae/results/README.md
-simulators/jla_supernovae/results_marginal/*
-!simulators/jla_supernovae/results_marginal/README.md
-simulators/cosmic_shear/results_d*
-simulators/cosmic_shear/results_nuisances
-simulators/cosmic_shear/results_marginal
-simulators/cosmic_shear/mcmc
-simulators/jla_supernovae/results_nofisher/*
+examples/simulators/__pycache__
+examples/simulators/*.pyc
+examples/simulators/cosmic_shear/__pycache__
+examples/simulators/cosmic_shear/*.pyc
+examples/simulators/cosmic_shear/results/*
+!examples/simulators/cosmic_shear/results/README.md
+examples/simulators/cosmic_shear/results_prerun/*
+!examples/simulators/cosmic_shear/results_prerun/README.md
+examples/simulators/jla_supernovae/__pycache__
+examples/simulators/jla_supernovae/*.pyc
+examples/simulators/jla_supernovae/results/*
+!examples/simulators/jla_supernovae/results/README.md
+examples/simulators/jla_supernovae/results_marginal/*
+!examples/simulators/jla_supernovae/results_marginal/README.md
+examples/simulators/cosmic_shear/results_d*
+examples/simulators/cosmic_shear/results_nuisances
+examples/simulators/cosmic_shear/results_marginal
+examples/simulators/cosmic_shear/mcmc
+examples/simulators/jla_supernovae/results_nofisher/*
 __pycache__
